Heavy modification to the database table, creation of seeds, prepared the environment for interface with Android

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,10 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+body{
+  padding-top: 70px;
+}
+
+menu, ol, ul, li {
+  padding: 0;
+  list-style: none;
+}
