--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,3 +8,24 @@ menu, ol, ul, li {
   padding: 0;
   list-style: none;
 }
+
+a:link
+{
+  color: white;
+  text-decoration: none;
+}
+a:visited
+{
+  color: white;
+  text-decoration: none;
+}
+a:hover
+{
+  color: #fb3f00;
+  text-decoration: none;
+}
+a:active
+{
+  color: #fb3f00;
+  text-decoration: none;
+}
